--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karibu DITSO Sanduku La Maoni</title>
+    <title>Karibu DIT Sanduku La Maoni</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <style>
         /* Basic body styling for full-page background and centering */
@@ -216,7 +216,7 @@
         
         <img src="C:\Users\Lenovo\trust code\CODE\SANDUKU LA MAONI\DIT_LOGO-removebg-preview.png" alt="DIT Logo" class="logo-img"> 
 
-        <a href="C:\Users\Lenovo\trust code\CODE\SANDUKU LA MAONI\index.html" class="welcome-button">KARIBU</a>
+        <a href="C:\Users\Lenovo\trust code\CODE\SANDUKU LA MAONI\start.html" class="welcome-button">KARIBU</a>
 
         <a href="tmg_digtech_info.html" class="tmg-digtech-button">
             <span>from</span>
